trying to make a lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,8 +131,13 @@ set(SOURCE_FILES
     src/query/query_plan.h
     src/query/cross_table_predicate.h
     src/query/selection_context.h
-    src/error/cross_table_predicate_type_mismatch.h src/data/aggregate_function.h src/data/aggregate_function_helper.h src/utility/memory/value_string_padder.h)
+    src/error/cross_table_predicate_type_mismatch.h
+    src/data/aggregate_function.h
+    src/data/aggregate_function_helper.h
+    src/utility/memory/value_string_padder.h)
 
 add_executable(WaterySQL ${SOURCE_FILES} src/main.cpp)
 add_executable(WaterySQL-IndexManagerTest ${SOURCE_FILES} test/index_manager_test.cpp)
 add_executable(WaterySQL-CommandParsingTest ${SOURCE_FILES} test/command_parsing_test.cpp)
+
+add_library(WaterySQLEngine ${SOURCE_FILES} lib/watery_sql.cpp lib/watery_sql.h)
