--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,12 @@ set(COMPILE_WITH_CLANG 1)
 if (COMPILE_WITH_CLANG)
     set(CMAKE_C_COMPILER "/usr/local/opt/llvm/bin/clang")
     set(CMAKE_CXX_COMPILER "/usr/local/opt/llvm/bin/clang++")
-    set(CMAKE_EXE_LINKER_FLAGS " ${CMAKE_EXE_LINKER_FLAGS} -L/usr/local/opt/llvm/lib -lc++fs")
+    link_directories(/usr/local/opt/llvm/lib)
+    link_libraries(c++fs)
 else ()
     set(CMAKE_C_COMPILER gcc-8)
     set(CMAKE_CXX_COMPILER g++-8)
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lstdc++fs")
+    link_libraries(stdc++fs)
 endif ()
 
 set(CMAKE_C_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Ofast -march=native -mtune=native -fomit-frame-pointer")
@@ -140,4 +141,4 @@ add_executable(WaterySQL ${SOURCE_FILES} src/main.cpp)
 add_executable(WaterySQL-IndexManagerTest ${SOURCE_FILES} test/index_manager_test.cpp)
 add_executable(WaterySQL-CommandParsingTest ${SOURCE_FILES} test/command_parsing_test.cpp)
 
-add_library(WaterySQLEngine ${SOURCE_FILES} lib/watery_sql.cpp lib/watery_sql.h)
+add_library(WaterySQLEngine SHARED ${SOURCE_FILES} lib/watery_sql.cpp lib/watery_sql.h)
